<resources>
    <string name="app_name">Degroot Rally</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="login">Login</string>
    <string name="current">Current Password</string>
    <string name="newpw">New Password</string>
    <string name="password">Password</string>
    <string name="guest">Continue as Guest</string>
    <string name="admin">Continue as Admin</string>
    <string name="no_account">No account? Sign up here</string>
    <string name="username">Username</string>
    <string name="forgot">Forgot Password</string>
    <string name="email">E-mail</string>
    <string name="submit">Submit</string>
    <string name="confirm">Confirm password</string>
    <string name="change">Change Password</string>
    <string name="logout">Logout</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="date">Date</string>
    <string name="save">Save</string>
    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>

    <string name="wind">Update Winddata</string>

    <string name="APP_KEY">b9kt8v09ov2tkp6</string>
    <string name="APP_SECRET">pmjyi3cabwfjqso</string>
</resources>