<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <!-- Add any data variables if needed -->
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Add your desired layout elements here -->
        <EditText
            android:id="@+id/current_password_txt_ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/current" />

        <EditText
            android:id="@+id/new_password_txt_ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/newpw" />

        <EditText
            android:id="@+id/confirm_password_txt_ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm" />

        <Button
            android:id="@+id/change_to_new_password_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change" />
    </LinearLayout>
</layout>
